Fix for Firefox grid overflow rendering bug

--- a/AllYourBase/Content/css/base.css
+++ b/AllYourBase/Content/css/base.css
@@ -9204,6 +9204,11 @@ body {
 }
 
 /* line 27, ../sass/partials/_styles.scss */
+.container-fluid.grid {
+  max-width: 99.9%;
+}
+
+/* line 31, ../sass/partials/_styles.scss */
 .row-flex {
   display: flex;
   justify-content: flex-start;
@@ -9211,37 +9216,37 @@ body {
   margin-top: auto;
 }
 @media only screen and (min-width: 62em) {
-  /* line 27, ../sass/partials/_styles.scss */
+  /* line 31, ../sass/partials/_styles.scss */
   .row-flex {
     flex-direction: row;
   }
 }
-/* line 37, ../sass/partials/_styles.scss */
+/* line 41, ../sass/partials/_styles.scss */
 .row-flex .logo img {
   width: 100%;
   max-width: 317px;
   height: auto;
 }
-/* line 43, ../sass/partials/_styles.scss */
+/* line 47, ../sass/partials/_styles.scss */
 .row-flex nav {
   margin-left: auto;
   margin-top: auto;
 }
-/* line 48, ../sass/partials/_styles.scss */
+/* line 52, ../sass/partials/_styles.scss */
 .row-flex .filter-options {
   display: flex;
 }
 
-/* line 53, ../sass/partials/_styles.scss */
+/* line 57, ../sass/partials/_styles.scss */
 .filter-nav {
   margin-bottom: 20px;
   font-family: swissboldcondensed;
 }
-/* line 57, ../sass/partials/_styles.scss */
+/* line 61, ../sass/partials/_styles.scss */
 .filter-nav .row {
   padding: 0;
 }
-/* line 61, ../sass/partials/_styles.scss */
+/* line 65, ../sass/partials/_styles.scss */
 .filter-nav a {
   display: inline-block;
   width: 140px;
@@ -9255,32 +9260,32 @@ body {
   font-size: 16px;
   margin-right: 5px;
 }
-/* line 74, ../sass/partials/_styles.scss */
+/* line 78, ../sass/partials/_styles.scss */
 .filter-nav a:last-of-type {
   padding-right: 0;
 }
-/* line 78, ../sass/partials/_styles.scss */
+/* line 82, ../sass/partials/_styles.scss */
 .filter-nav a:hover, .filter-nav a.active {
   background: #333333;
   color: #ffffff;
 }
 
-/* line 85, ../sass/partials/_styles.scss */
+/* line 89, ../sass/partials/_styles.scss */
 .isotope-item {
   z-index: 2;
 }
 
-/* line 89, ../sass/partials/_styles.scss */
+/* line 93, ../sass/partials/_styles.scss */
 .grid .row {
   padding-left: 0;
   padding-right: 0;
 }
-/* line 93, ../sass/partials/_styles.scss */
+/* line 97, ../sass/partials/_styles.scss */
 .grid .row [class*='col-'] {
   padding-left: 5px;
   padding-right: 5px;
 }
-/* line 98, ../sass/partials/_styles.scss */
+/* line 102, ../sass/partials/_styles.scss */
 .grid .row h2 {
   text-transform: uppercase;
 }
